[package]
name = "wfilter"
version = "0.0.1-alpha"
authors = ["Njagi Mwaniki <njagi+cargo@njagi.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coitrees = "0.2.1"
clap = "^2.33.0"
libwfa = "0.1"
seq_io = "0.3.1"
indicatif = "0.16.2"